adding question 42